--- a/Source/ui/package.json
+++ b/Source/ui/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "with-cookie-auth",
+  "name": "next-jwt-authentication",
+  "version": "1.0.0",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "isomorphic-unfetch": "^3.0.0",
+    "axios": "^0.17.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
     "js-cookie": "^2.2.0",
     "next": "^7.0.2",
-    "next-cookies": "^1.0.4",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next-redux-wrapper": "^2.0.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "http-proxy": "^1.17.0"
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.17.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
