added dashboard screen

--- a/API Specs/Swagger/mock-server/config.json
+++ b/API Specs/Swagger/mock-server/config.json
@@ -2,6 +2,14 @@
     "DELETE": {
         "Resources": []
     },
+    "GET": {
+        "Resources": [{
+            "resourceFileName": "user.js",
+            "operationIds": [
+                "/api/user"                    
+            ]
+        }]
+    },
     "POST": {
         "Resources": [{
             "resourceFileName": "usersignin.js",
