added products screen

--- a/API Specs/Swagger/mock-server/config.json
+++ b/API Specs/Swagger/mock-server/config.json
@@ -8,6 +8,11 @@
             "operationIds": [
                 "/api/user"                    
             ]
+        }, {
+            "resourceFileName": "products.js",
+            "operationIds": [
+                "/api/products/getAll"                    
+            ]
         }]
     },
     "POST": {
